2005-11-17 17:29 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerRemoveUnused) try either node to
	collapse unused edges. don't return null if unable to collapse.
	keep remaining unused. should try best?
	* src/unit_main.c (main) --phase -1: limit cost to prohibit
	invalid elements.

2005-11-17 12:21 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeSupport) to construct
	aans use a refined support edge durring ideal discretization.

2005-11-16 21:41 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: replace 
	gridedgerDiscretizeEvenly with gridedgerDiscretizeOnce.

2005-11-16 21:32 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeOnce) ready to test.

2005-11-16 21:29 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeOnce) to create the
	`ideal' locations locations in one step and avoid iterative
	shooting. I just found a bug I'm fixing, but I wanted to
	commit before hacking it apart.

2005-11-04 10:19 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: made an array of GridEdger
	pointers to seperate gridedgerInsert from gridedgerRemoveUnused
	to make plots inbetween. Note that renum call backs are not
	implemented, so do renumber (by plotting) and keep calling
	gridedger routines.

2005-11-03 22:22 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: remove unused nodes after
	ideal insertion

2005-11-03 17:30 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerRemoveUnused) to remove the unused nodes
	stored off in gridedgerInsert with gridCollapseEdge and leave only
	nodes int `ideal' locations.

2005-11-03 16:57 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio) use gridInterpolateMap2
	and gridInterpolateAux2 to interpolate newly inserted node
	data instead of averaging. (they are equivalent for a ratio of
	0.5, used by the parallel fun3d interface)
